--- a/Dream_shop/dream_shop/.env
+++ b/Dream_shop/dream_shop/.env
@@ -3,6 +3,6 @@ EMAIL_BACKEND='django.core.mail.backends.smtp.EmailBackend'
 EMAIL_HOST='smtp-relay.sendinblue.com'
 EMAIL_PORT=587
 EMAIL_HOST_USER='maboutiquedereve62@gmail.com'
-EMAIL_HOST_PASSWORD='HGj54nMIDx9ywQgR'
+EMAIL_HOST_PASSWORD=''
 EMAIL_USE_TLS=True
 EMAIL_USE_SSL=False
